deploy-aws.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: aws-pod
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: tlhsenai/siteprojhttp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      - name: zabbix-agent
        image: zabbix/zabbix-agent:latest
---
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: default
spec:
  selector:
    app: webserver
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: kubeissuer
    kubernetes.io/ingress.class: nginx
  name: webserver-ingress
  namespace: default
spec:
  rules:
  - host: mesa1.ctiturbo.com.br
    http:
      paths:
      - backend:
          service:
            name: webserver
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: "*.mesa1.ctiturbo.com.br"
    http:
      paths:
      - backend:
          service:
            name: webserver
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - mesa1.ctiturbo.com.br
    - "*.mesa1.ctiturbo.com.br"
    secretName: default
---
